# clp

./: .env.example  .gitignore  Events.md  README.md  WoWCombatLog_Reference_and_Parser_Conversation.md  __init__.py  __main__.py  clp.py  envsetup.py  main.py  manip.ipynb  pyproject.toml  requirements.txt  run  wowclp.README.md  wowclp.py
