[project]
name = "clp"
version = "0.1.0"
description = "CombatLog parse utils for World of Warcraft 3.3.5a."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.3.2",
    "pandas==2.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "six==1.17.0",
    "tzdata==2025.2",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

