[project]
name = "clp"
version = "0.1.0"
description = "CombatLog parse utils for World of Warcraft 3.3.5a."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas==2.3.2",
    "python-dotenv==1.1.1",
]

[project.optional-dependencies]
ipynb = [
    "notebook>=7.4.5",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

